--- a/config-data/ms-evento-service.yml
+++ b/config-data/ms-evento-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8082
 
 springdoc:
   api-docs:
@@ -15,7 +15,7 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/configuracion
+    url: jdbc:mysql://localhost:3306/evento
     username: root
     password:
 
