--- a/config-data/ms-evento-service.yml
+++ b/config-data/ms-evento-service.yml
@@ -15,7 +15,7 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/evento
+    url: jdbc:mysql://localhost:3306/ms_evento
     username: root
     password:
 
