--- a/config-data/ms-configuracion-service.yml
+++ b/config-data/ms-configuracion-service.yml
@@ -28,6 +28,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+  instance:
+    instance-id: ${spring.aplication.name}:${spring.aplication.instance_id:${random.value}}
 
 
 
