--- a/config-data/ms-configuracion-service.yml
+++ b/config-data/ms-configuracion-service.yml
@@ -29,7 +29,7 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
-    instance-id: ${spring.aplication.name}:${spring.aplication.instance_id:${random.value}}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
 
