--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -25,7 +25,7 @@ spring:
         - id: ms-configuracion-service
           uri: lb://ms-configuracion-service
           predicates:
-            - Path=/institucion/**,/filial/**,/facultad/**,/escuela-profesional/**,/periodo/**,/persona/**,/ciclo/**,/grupo/**
+            - Path=/institucion/**,/filial/**,/facultad/**,/escuela-profesional/**,/periodo/**,/persona/**,/ciclo**,/grupo**
         - id: ms-evento-service
           uri: lb://ms-evento-service
           predicates:
