--- a/config-data/ms-evento-service.yml
+++ b/config-data/ms-evento-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: ${PORT:${SERVER_PORT:0}}
 
 springdoc:
   api-docs:
@@ -19,15 +19,12 @@ spring:
     username: root
     password:
 
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8090/eureka/
-
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
 
