--- a/ms-bff-asistencia-web/src/main/resources/application.yml
+++ b/ms-bff-asistencia-web/src/main/resources/application.yml
@@ -1,1 +1,8 @@
 
+spring:
+  application:
+    name: ms-bff-asistencia-web-service
+  profiles:
+    active: development
+  config:
+    import: optional:configserver:http://root:s3cr3t@localhost:7070
