--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -25,7 +25,7 @@ spring:
         - id: ms-bff-asistencia-web-service
           uri: lb://ms-bff-asistencia-web-service
           predicates:
-            - Path=/institucion/**,/filial/**,/facultad/**,/escuela-profesional/**,/periodo/**,/persona/**,/ciclo**,/grupo**,/persona/matricula**
+            - Path=/institucion/**,/filial/**,/facultad/**,/escuela-profesional/**,/periodo/**,/persona/**,/ciclo**,/grupo**,/persona/matricula**,/evento/**
         #- id: ms-evento-service
         #  uri: lb://ms-evento-service
         #  predicates:
