--- a/config-data/ms-bff-asistencia-web-service.yml
+++ b/config-data/ms-bff-asistencia-web-service.yml
@@ -14,5 +14,17 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+resilience4j.circuitbreaker:
+  instances:
+    asistenciaGuardarBffCB:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 4
+      waitDurationInOpenState: 5s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+
 
 
