--- a/config-data/ms-configuracion-service.yml
+++ b/config-data/ms-configuracion-service.yml
@@ -26,6 +26,15 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+
 resilience4j.circuitbreaker:
   instances:
     personaCB:
