--- a/config-data/ms-auth-service.yml
+++ b/config-data/ms-auth-service.yml
@@ -7,7 +7,7 @@ spring:
     generate-ddl: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/auth
+    url: jdbc:mysql://localhost:3306/ms_auth
     username: root
     password:
 eureka:
