--- a/ms-config-server/src/main/resources/application.yml
+++ b/ms-config-server/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
           searchPaths: config-data
           username: noetipo
           password: Tipo47259697
-          default-label: main
+          default-label: develop
 
 
   security:
