--- a/config-data/ms-auth-service.yml
+++ b/config-data/ms-auth-service.yml
@@ -1,5 +1,6 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
+  #port: 9091
 spring:
   jpa:
     hibernate.ddl-auto: update
@@ -7,13 +8,13 @@ spring:
     generate-ddl: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ms_auth
+    url: jdbc:mysql://mysql-auth:3306/ms_auth
     username: root
-    password:
+    password: 123456
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+      defaultZone: ${EUREKA_URI:http://registry-server:8090/eureka}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 management:
