--- a/ms-gateway-server/src/main/resources/application.yml
+++ b/ms-gateway-server/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
   profiles:
     active: development
   config:
-    import: optional:configserver:http://root:s3cr3t@ms-config-server:7070
+    import: optional:configserver:http://root:s3cr3t@config-server:7070
