--- a/ms-auth/src/main/resources/application.yml
+++ b/ms-auth/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: development
   config:
-    import: optional:configserver:http://root:s3cr3t@localhost:7070
+    import: optional:configserver:http://root:s3cr3t@config-server:7070
 
 jwt:
   secret: secret
