--- a/ms-auth/docker-compose.yml
+++ b/ms-auth/docker-compose.yml
@@ -8,7 +8,8 @@ services:
   mysql-auth:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-
+    networks:
+      - mi_red
     environment:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=ms_auth
@@ -17,6 +18,8 @@ services:
   
   ms-auth:
     build: .
+    networks:
+      - mi_red
     depends_on:
       - mysql-auth
     
