--- a/config-data/ms-evento-service.yml
+++ b/config-data/ms-evento-service.yml
@@ -15,14 +15,14 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ms_evento
+    url: jdbc:mysql://mysql-evento:3306/ms_evento
     username: root
     password:
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
+      defaultZone: ${EUREKA_URI:http://registry-server:8090/eureka}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
