--- a/ms-asistencia/docker-compose.yml
+++ b/ms-asistencia/docker-compose.yml
@@ -1,3 +1,5 @@
+
+
 version: '3'
 
 networks:
@@ -6,22 +8,22 @@ networks:
     name: micro_red
 
 services:
-  mysql-auth:
+  mysql-asistencia:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     networks:
       - micro_red
     environment:
       - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=ms_auth
+      - MYSQL_DATABASE=ms_asistencia
     ports:
       - 3306:3306
   
-  ms-auth:
+  ms-asistencia:
     build: .
     networks:
       - micro_red
     depends_on:
-      - mysql-auth
+      - mysql-asistencia
     scale: 3    
 
