--- a/ms-admin-server/Dockerfile
+++ b/ms-admin-server/Dockerfile
@@ -1,17 +1,14 @@
-FROM openjdk:17-jdk-alpine as build-gateway
-
-RUN mkdir -p /code
+FROM openjdk:17-jdk-alpine as build-admin
 COPY . /code
 WORKDIR /code
-RUN ./mvnw compile
 RUN ./mvnw package
 
 
-FROM openjdk:17-jdk-alpine as deploy-gateway
+FROM openjdk:17-jdk-alpine as deploy-admin
 
 RUN mkdir -p /opt/app
 
-COPY --from=build-gateway /code/target/*.jar /opt/app/
-EXPOSE 8090
-ENTRYPOINT ["java", "-jar", "/opt/app/ms-gateway-server-0.0.1-SNAPSHOT.jar"]
+COPY --from=build-admin /code/target/*.jar /opt/app/
+EXPOSE 6060
+ENTRYPOINT ["java", "-jar", "/opt/app/ms-admin-server-0.0.1-SNAPSHOT.jar"]
 
