--- a/config-data/ms-configuracion-service.yml
+++ b/config-data/ms-configuracion-service.yml
@@ -15,9 +15,9 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ms_configuracion
+    url: jdbc:mysql://mysql-configuration:3306/ms_configuracion
     username: root
-    password:
+    password: 123456
 
 eureka:
   client:
