--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,13 @@ services:
       - 7070:7070
     networks:
       - micro_red
-    cpu_limit: 0.5
-    mem_limit: 1g
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1g
+
+
 
   
   registry-server:
@@ -27,8 +32,12 @@ services:
       - config-server
     networks:
       - micro_red
-    cpu_limit: 0.5
-    mem_limit: 1g
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1g
+
 
   gateway-server:
     build: ms-gateway-server
@@ -38,8 +47,12 @@ services:
       - config-server
     networks:
       - micro_red
-    cpu_limit: 0.5
-    mem_limit: 1g
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1g
+
   
   admin-server:
     build: ms-admin-server
@@ -49,5 +62,8 @@ services:
       - config-server
     networks:
       - micro_red
-    cpu_limit: 0.5
-    mem_limit: 1g
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1g
