--- a/ms-bff-asistencia-web/docker-compose.yml
+++ b/ms-bff-asistencia-web/docker-compose.yml
@@ -11,5 +11,11 @@ services:
     build: .
     networks:
       - micro_red
-    scale: 3    
+    
+    deploy:
+      replicas: 3
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1g
 
