--- a/ms-auth/docker-compose.yml
+++ b/ms-auth/docker-compose.yml
@@ -8,6 +8,7 @@ networks:
 services:
   mysql-auth:
     image: mysql
+    restart: always
     command: --default-authentication-plugin=mysql_native_password
     networks:
       - micro_red
@@ -26,6 +27,7 @@ services:
   
   ms-auth:
     build: .
+    restart: always
     networks:
       - micro_red
     depends_on:
