--- a/ms-evento/docker-compose.yml
+++ b/ms-evento/docker-compose.yml
@@ -10,6 +10,7 @@ networks:
 services:
   mysql-evento:
     image: mysql
+    restart: always
     command: --default-authentication-plugin=mysql_native_password
     networks:
       - micro_red
@@ -28,6 +29,7 @@ services:
   
   ms-evento:
     build: .
+    restart: always
     networks:
       - micro_red
     depends_on:
